// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardElement component nested CardElement snapshot 1`] = `
<styled.div>
  <LabelLink
    description="A not  exhaustive list of search engines"
    title="Search engines"
    url=""
  />
  <styled.div>
    <CardElement
      description="One of the best search engine"
      title="Google"
      url="https://www.google.it/"
    />
    <CardElement
      description="Another search engine"
      title="Duck Duck Go"
      url="https://duckduckgo.com/"
    />
  </styled.div>
</styled.div>
`;

exports[`CardElement component simple CardElement snapshot 1`] = `
<styled.div>
  <LabelLink
    description="One of the best search engine"
    title="Google"
    url="https://www.google.it/"
  />
  <styled.div />
</styled.div>
`;
